1.KMeans hecho y 4. Excepciones